AudioPannerNode should raise exception when distanceModel is set incorrectly https://bugs.webkit.org/show_bug.cgi?id=90952

Patch by Li Yin <li.yin@intel.com> on 2012-07-31
Reviewed by Chris Rogers.

Source/WebCore:

Spec: http://www.w3.org/TR/webaudio/#AudioPannerNode-section
The distance model can be only set to LINEAR_DISTANCE, INVERSE_DISTANCE or EXPONENTIAL_DISTANCE.
If the incorrect value is set, it will raise the exception.
Use the unsigned short to replace unsigned long in AudioPannerNode.idl.

Test: webaudio/audiopannernode-basic.html

* Modules/webaudio/AudioPannerNode.cpp:
(WebCore::AudioPannerNode::setDistanceModel): raise exception
(WebCore):
* Modules/webaudio/AudioPannerNode.h:
(AudioPannerNode):
* Modules/webaudio/AudioPannerNode.idl: using unsigned short to replace unsigned long

LayoutTests:

Spec: http://www.w3.org/TR/webaudio/#AudioPannerNode-section
Add tests for distanceModel,numberOfInputs and numberOfInputs of AudioPannerNode.

* webaudio/audiopannernode-basic-expected.txt: Added.
* webaudio/audiopannernode-basic.html: Added.
* webaudio/panner-set-model-expected.txt: Removed.
* webaudio/panner-set-model.html: Removed.

Canonical link: https://commits.webkit.org/110612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124237 268f45cc-cd09-0410-ab3c-d52691b4dbfc